# Neural_search

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
artifacts/results/: bm25_latency.json  bm25_run.json
data/collections/base/: metadata.json
evals/lexical_search/: eval_bm25_retrieval.py
evals/results/: bm25_eval.json
evaluation/: queries.json  relevance.json  relevence.json
scripts/: build_eval_dataset.py  download_data.py  ingest_documents.py  prepare_eval_queries.py  requirements.txt  run_eval.py  verify_data.py
src/neural_search/: config.py
src/neural_search/api/: main.py  routes.py  schemas.py
src/neural_search/collections/: manager.py
src/neural_search/evaluation/: queries.json  relevence.json
src/neural_search/ingestion/: chunker.py  parser.py  pipeline.py
src/neural_search/lexical_search/: bm25_index.py
src/neural_search/retrieval/: dense.py  hybrid.py  learned.py  reranker.py  sparse.py
src/neural_search/synthesis/: groq_client.py  prompt.py
src/ui/: app.py  config.py
src/ui/components/: collections.py  results.py  sidebar.py  upload.py
tests/: conftest.py  test_api.py  test_groq_client.py  test_hybrid.py  test_ingestion_pipeline.py  test_manager.py
