[project]
name = "neural-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aryanshr", email = "Arynshr@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
neural-search = "neural_search:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
